[package]
name = "thin_main_loop"
version = "0.1.5"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"
readme = "README.md"
description = "Thin, cross-platform, main event loop. A building block for native GUI applications, among other use cases."
repository = "https://github.com/diwic/thin_main_loop"
documentation = "http://docs.rs/thin_main_loop"
keywords = ["event", "loop", "message", "dispatcher", "main"]
license = "Apache-2.0/MIT"
categories = ["api-bindings", "asynchronous", "os::unix-apis", "os::windows-apis"]

[dependencies]
wasm-bindgen = { version = "0.2.29", optional = true }
js-sys = { version = "0.3.6", optional = true }
lazy_static = "1.1"
futures-preview = { version = "0.3.0-alpha.13", optional = true }
boxfnonce = "0.1.1"

[dependencies.glib-sys]
version = "0.7"
optional = true
features = ["v2_36"]

[dependencies.winapi]
version = "0.3"
optional = true
features = ["winuser", "libloaderapi", "std", "winsock2"]

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  'Window',
]

[features]
futures = ["futures-preview"]
glib = ["glib-sys"]
win32 = ["winapi"]
web = ["wasm-bindgen", "js-sys", "web-sys"]

[package.metadata.docs.rs]
features = ["futures"]
